<resources>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="app_name">Vinee</string>
    <string name="action_settings">Settings</string>
    <string name="network_problem_title">Network problem</string>
    <string name="network_problem_desc">We are sorry. We couldn\'t complete the operation due to network problem. Please make sure you have network access.</string>
    <string name="authentication_activity_contact_us_button">Contact Us</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="reset_password_activity_title">Reset Password</string>
    <string name="reset_password_activity_email_hint">Email</string>
    <string name="reset_password_activity_intro">Enter your email address below and we\'ll send you new password</string>
    <string name="reset_password_activity_submit_button_text">Submit</string>
    <string name="click_here">Click here</string>
    <string name="text_end">.</string>
    <string name="exclamation_circle">&#xf06a;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_wechat">&#xf1d7;</string>
    <string name="authentication_activity_title">Authentication</string>
    <string name="authentication_activity_view_more_button">View More…</string>
    <string name="authentication_activity_no_record_warning">This Tag is not recorded</string>
    <string name="authentication_activity_scan_again_title">Please scan again</string>
    <string name="authentication_activity_hold_longer_time_warning">You may have moved your phone too fast. Please tap again and keep your phone on top of the NFC tag until authentication result pop up. Still failed? Please\u0020</string>
    <string name="authentication_activity_warning_no_ndef_title">No NDEF messages found</string>
    <string name="authentication_activity_warning_no_ndef_messages">We cannot find NDEF messages in this tag. If you consistently cannot scan successfully, please contact us.</string>
    <string name="authentication_activity_warning_no_ndef_records">No NDEF records found!</string>
    <string name="authentication_activity_warning_tag_not_null">Tag cannot be null!</string>
    <string name="authentication_activity_warning_tag_not_formatted">Tag is not formatted!</string>
    <string name="authentication_activity_warning_tag_not_writable">Tag is not writable!</string>
    <string name="authentication_activity_warning_tag_written">Tag written!</string>
    <string name="authentication_activity_warning_bottle_opened">This bottle is opened!</string>
    <string name="authentication_activity_the_wine">The Wine:</string>
    <string name="authentication_activity_year">Year:</string>
    <string name="authentication_activity_region">Region:</string>
    <string name="authentication_activity_wrong_auth_code_reminder">Authentication code is incorrect!</string>
    <string name="authentication_activity_result_genuine_headline_prefix">BOTTLE IS\u0020</string>
    <string name="authentication_activity_result_genuine_headline">GENUINE</string>
    <string name="authentication_activity_result_genuine">AND HAS NEVER BEEN OPENED</string>
    <string name="authentication_activity_result_opened_headline_prefix">BOTTLE IS\u0020</string>
    <string name="authentication_activity_result_opened_headline">OPENED</string>
    <string name="authentication_activity_result_opened_where">Where:</string>
    <string name="authentication_activity_result_opened_when">When:</string>
    <string name="authentication_activity_result_opened_caution">If you see this bottle on sale in any retail shop or have bought it online, please\u0020</string>
    <string name="authentication_activity_contact_us">CONTACT US</string>
    <string name="authentication_activity_result_fake">CANNOT IDENTIFY THIS BOTTLE</string>
    <string name="authentication_activity_contact_us_fake">immediately to help track counterfeiters.</string>
    <string name="authentication_activity_open_bottle_button_left">Click to Open and Earn</string>
    <string name="authentication_activity_open_bottle_button_right">Points</string>
    <string name="authentication_activity_location_request">You need to grant Vinee access to Location to use authentication service!</string>
    <string name="authentication_activity_view_more">View More</string>
    <string name="authentication_activity_user_rating">Rating:\u0020</string>
    <string name="authentication_activity_fake_headline">CANNOT IDENTIFY THIS BOTTLE</string>
    <string name="authentication_activity_fake_description_begin">Data has not been captured successfully.\nPlease\u0020</string>
    <string name="authentication_activity_average_rating">Rating:</string>
    <string name="wine_info_activity_average_rating">Rating:</string>
    <string name="wine_info_activity_average_price">AVERAGE PRICE</string>
    <string name="wine_info_activity_rating_bar_text">Tap to Rate, slide for half star</string>
    <string name="wine_info_activity_rating_bar_already_rated_text">You\'ve rated this wine.</string>
    <string name="wine_info_activity_reviews">Reviews</string>
    <string name="wine_info_activity_add_to_my_bottles_button">Add to My Bottles</string>
    <string name="wine_info_activity_re_rate"><u>Re-rate?</u></string>
    <string name="wine_info_activity_title">The Wine</string>
    <string name="wine_info_activity_add_review_text_link">Add Reviews</string>
    <string name="wine_info_activity_add_review_text_hint">Let others know what you think about it</string>
    <string name="wine_info_activity_unfollow">Unfollow</string>
    <string name="wine_info_activity_follow">Follow</string>
    <string name="wine_info_activity_following">Following</string>
    <string name="wine_info_activity_unfollow_alert_title">Unfollow</string>
    <string name="wine_info_activity_unfollow_alert_message">Are you sure to unfollow </string>
    <string name="wine_info_activity_unfollow_alert_confirm">Confirm</string>
    <string name="wine_info_activity_unfollow_alert_cancel">Cancel</string>
    <string name="wine_info_activity_winery_info_link"><u>Visit the Winery</u></string>
    <string name="wine_info_activity_buy_button_text">Buy Now</string>
    <string name="wine_info_activity_bouquet_n_palate_prefix">Bouquet &amp; Palate</string>
    <string name="wine_info_activity_food_pairing_prefix">Food Pairing</string>
    <string name="wine_info_activity_cellaring_prefix">Cellaring</string>
    <string name="wine_info_activity_region_prefix">Region</string>
    <string name="wine_info_activity_grape_varieties_prefix">Grape Varieties</string>
    <string name="winery_info_activity_view_more">View More</string>
    <string name="winery_info_activity_our_wines">Our Wines</string>
    <string name="winery_info_website_link_text">Enter Website</string>
    <string name="write_rating_and_review_activity_title">Rate &amp; Review</string>
    <string name="write_rating_and_review_hint"><b>Write your review here</b>\n(Max 1000 Characters)</string>
    <string name="write_rating_and_review_submit_button">Submit</string>
    <string name="write_rating_and_review_content_limit">1000\//1000</string>
    <string name="my_bottles_activity_title">My Bottles</string>
    <string name="my_bottles_activity_opened_bottle_text">OPENED</string>
    <string name="my_bottles_activity_rated_text">RATED</string>
    <string name="my_bottles_activity_wish_list_text">WISHLIST</string>
    <string name="my_bottles_activity_scanned_text">SCANNED</string>
    <string name="my_bottles_activity_repurchase_button_text">Repurchase</string>
    <string name="news_feed_activity_title">Discover</string>
    <string name="qrscanner_activity_title">Scan QRCode to Confirm</string>
    <string name="qrscanner_activity_hint">Please uncover the NFC label, and scan the QR code on the back!</string>
    <string name="qrscanner_activity_check_steps_btn_text">Click here to see how to scan QR code</string>
    <string name="qrscanner_activity_camera_request">You need to grant Vinee access to camera to scan QR code!</string>
    <string name="user_profile_my_profile_activity_title">My Profile</string>
    <string name="user_profile_other_profile_activity_title">User Profile</string>
    <string name="user_profile_edit">Edit</string>
    <string name="user_profile_summary_text">SUMMARY</string>
    <string name="user_profile_wishlist_text">WISHLIST</string>
    <string name="user_profile_following_text">FOLLOWING</string>
    <string name="user_profile_follower_text">FOLLOWER</string>
    <string name="user_profile_rating_text">RATING</string>
    <string name="user_profile_name">Name: </string>
    <string name="user_profile_user_email">Email: </string>
    <string name="user_profile_user_gender">Gender: </string>
    <string name="user_profile_user_dob">Date of Birth: </string>
    <string name="user_profile_user_points">Reward Points: </string>
    <string name="user_profile_upload_photo">&#xf030;</string>
    <string name="friend_list_activity_title">Add More Friends</string>
    <string name="friend_search_hint">&#xf002; Search</string>
    <string name="reward_program_add_reward_points_response_already_earned">You have already received this reward!</string>
    <string name="reward_program_add_reward_points_response_success_prefix">You just earned</string>
    <string name="reward_program_add_reward_points_response_success_suffix">points.</string>
    <string name="upload_photo_activity_select_button">Select Photo</string>
    <string name="upload_photo_activity_upload_button">Upload Photo</string>
    <string name="upload_photo_activity_uploading">Uploading…</string>
    <string name="upload_photo_activity_waiting">Please wait…</string>
    <string name="upload_photo_activity_please_select_a_photo">Please select a photo to upload!</string>
    <string name="share_dialog_activity_wechat_friends">Friends</string>
    <string name="share_dialog_activity_wechat_moments">Moments</string>
    <string name="share_dialog_activity_others">Others</string>
    <string name="share_dialog_activity_title">Share To</string>
    <string name="redeem_points_activity_points">Points:</string>
    <string name="redeem_points_activity_out_of_stock">Out of stock</string>
    <string name="nfc_authentication_btn_desc">Authentication</string>
    <string name="find_btn_desc">Discover</string>
    <string name="my_bottles_btn_desc">My Bottles</string>
    <string name="nav_drawer_my_profile">My Profile</string>
    <string name="nav_drawer_friends">Search Friends</string>
    <string name="nav_drawer_all_bottles">Explore Wines</string>
    <string name="nav_drawer_contact_us">Contact Us</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_logout">Log Out</string>
    <string name="nav_drawer_quick_link_title">ＨＯＭＥ</string>
    <string name="welcome_page_more_features_title">Connect to Owners of Global Wineries\nTrusted Advices for Finding the Next Bottle</string>
    <string name="welcome_page_sign_up">Sign Up</string>
    <string name="welcome_page_forgot_password">Forgot Password?</string>
    <string name="welcome_page_login">Log In</string>
    <string name="welcom_page_wechat_login_text">Log in with Wechat</string>
    <string name="login_activity_or">Or</string>
    <string name="login_activity_username_hint">Username</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_login_button_text">Log In</string>
    <string name="login_activity_signup_button_text">Create account</string>
    <string name="login_activity_forgot_button_text">Forgot Password?</string>
    <string name="login_activity_wechat_signin_hit">Sign In with Wechat</string>
    <string name="qrscan_desc_hint">We need you to scan the QR code underneath the NFC tag to confirm.</string>
    <string name="qrscan_desc_caution">Caution: you must not peel off the top layer if you don’t own this bottle.</string>
</resources>