<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="co.tagtalk.winemate.WelcomePageMoreFeaturesFragment">

    <RelativeLayout
        android:id="@+id/welcome_more_features_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcome_more_features_buttons"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/welcome_more_features_pic"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:src="@drawable/welcome_3_more_feature"/>

        <TextView
            android:id="@+id/welcome_more_features_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/welcome_more_features_pic"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_page_more_features_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextWhite"
            android:textSize="17sp"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/welcome_more_features_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/welcome_wechat_login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/welcome_activity_wechat_login_button"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:text="@string/fa_wechat"
                android:textColor="@color/colorTextWhite"
                android:textSize="40sp"
                android:background="@android:color/transparent">
            </Button>

            <TextView
                android:id="@+id/welcome_activity_wechat_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/welcom_page_wechat_login_text"
                android:textColor="@color/colorTextWhite"
                android:textSize="12sp"/>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/welcome_divider_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/welcome_wechat_login_layout"
            android:layout_toEndOf="@+id/welcome_wechat_login_layout"
            android:layout_toRightOf="@+id/welcome_wechat_login_layout"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:gravity="end">

            <View
                android:id="@+id/welcome_activity_divider_top"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                style="@style/Vertical_Divider_Partial_Thin_White"
                android:layout_above="@+id/welcome_activity_or"/>

            <TextView
                android:id="@+id/welcome_activity_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/login_activity_or"
                android:textColor="@color/colorTextWhite"
                android:textSize="12sp"/>

            <View
                android:id="@+id/welcome_activity_divider_bottom"
                style="@style/Vertical_Divider_Partial_Thin_White"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_below="@+id/welcome_activity_or"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/welcome_login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/welcome_wechat_login_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_toEndOf="@+id/welcome_divider_layout"
            android:layout_toRightOf="@+id/welcome_divider_layout"
            android:gravity="end">

            <Button
                android:id="@+id/welcome_activity_sign_up_button"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/welcome_button_rectangle_white_border"
                android:text="@string/welcome_page_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorTextWhite">
            </Button>

            <Button
                android:id="@+id/welcome_activity_login_button"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/welcome_activity_sign_up_button"
                android:layout_toRightOf="@+id/welcome_activity_sign_up_button"
                android:background="@drawable/welcome_button_rectangle_white_border"
                android:text="@string/welcome_page_login"
                android:textAllCaps="false"
                android:textColor="@color/colorTextWhite">
            </Button>

            <TextView
                android:id="@+id/welcome_activity_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/welcome_activity_login_button"
                android:layout_alignLeft="@+id/welcome_activity_sign_up_button"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/welcome_activity_login_button"
                android:layout_alignStart="@+id/welcome_activity_sign_up_button"
                android:layout_below="@+id/welcome_activity_sign_up_button"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/welcome_page_forgot_password"
                android:textColor="@color/colorTextWhite"
                android:textSize="12sp"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/welcome_progress_bar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/text_white"
        android:visibility="gone">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</RelativeLayout>